feat(25): Changing method name and http method type. Adding new route to toggle ticket status.
