# routes/api.php
@@ -19,10 +19,7 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::apiResource('tickets', TicketController::class);
-
-Route::prefix('tickets')->group(function () {
-    Route::put('/{id}/toggle_resolve', [TicketController::class, 'toggle_resolve'])->name('tickets.toggle_resolve');
-});
+Route::apiResource('tickets', TicketController::class)->except(['delete']);
+Route::patch('/tickets/{id}/toggle-resolve', [TicketController::class, 'toggleResolve']);
 
 
